# python_piscine

./: README.md
py00/: ex01_reversetxt_upperlower_concatearg.py  ex02_try_except_int.py  ex03_if_name_main_textcheck.py  ex04_sum_dif_product_quotien.py  ex05_format_print_number_list_tuple_date.py  ex06_dictionary_cookook_options.py  ex07_list_comprehension.py  ex08_dictionary_morse.py  ex09_guess_the_number.py  requirements.txt
py01/: ex01_heritage_classes.py  ex03.py  ex04_zip_enumerate.py  ex05_setattr_del_gestion_attributs_dir.py
py01/ex00_classes/: book.py  recipe.py  test.py
py01/ex02/: test.py  vector.py
py01/ex02_Vector_Class/: test.py  vector.py
py02/: ex01_args_kwargs_setattr_getattr.py  ex05_numpy_basic.py
py02/ex00/: ft_filter.py  ft_reduce.py
py02/ex00_map_filter_reduce/: ft_map.py
py02/ex03_context_manager/: bad.csv  ex03.py
py02/ex04/my_minipack_mafranco/: LICENSE  README.md  build.sh
py02/ex04_creating_package/my_minipack_mafranco/: .pypirc  pyproject.toml
py02/ex04_creating_package/my_minipack_mafranco/src/logger/: decorator.py
py02/ex04_creating_package/my_minipack_mafranco/src/my_minipack_mafranco.egg-info/: SOURCES.txt
py02/ex04_creating_package/my_minipack_mafranco/src/progress/: charging_bar.py
py03/: csv.csv  ex00_np_array_create.py  ex01_img_display.py  ex02_manipulate_array.py  ex03_control_RGB.py  ex04.py  getcsv.py
py04/: ex00_data_frame_load_display.py  ex01_filter_get_value.py  ex02_proportion_drop.py  ex03_sort_iloc_id.py  ex04_find_value_with_anther.py  ex05_medals_per_country.py  ex06.py  ex07.py
(+2 files in other folders)
