[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_minipack_mafranco"
version = "1.0.0"
description = "Howto create a package in python."
authors = [
	{ name="mafranco", email="mafranco@student.42.fr" },
]
license = { file="LICENSE" }
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
keywords = [
	"Education",
	"Package",
	"HowTo"
]

[testpypi]
  username = __token__
  password = pypi-AgENdGVzdC5weXBpLm9yZwIkOTFiMjljY2YtYjQxMi00ZGU4LWJhYWEtMjhkNDZlYTgwNmJkAAIqWzMsImFhNzMxZTNiLWU1ODAtNGE1Yy1iYTU3LTI1M2NhZTk2NjBlYiJdAAAGIEZgEFi1eUy8yT8AaqQSzP9uJtd9-TN_rH6FgElThaSI

readme = "README.md"